--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.27 2001/12/01 04:31:29 guppy Exp $
+# $Id: core.english.lang,v 1.28 2001/12/20 04:53:28 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -188,7 +188,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0x630,I don't know you; please introduce yourself first.
 0x631,No help.
 0x632,No help available on that.
-0x633,is not a normal file!
+# 0x633 - unused
 0x634,Not on that channel right now.
 0x635,Switching back to nick %s
 0x636,Server says my nickname is invalid.
