--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.259 2001/12/20 06:32:00 guppy Exp $
+$Id: UPDATES1.6,v 1.260 2001/12/20 06:53:15 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+Tothwolf  guppy     .servers doesn't trunicate server names anymore
 Wcc       guppy     made cmd_modules work locally as well as remotely
           guppy     made show_banner reset the help_subst arguments like show_motd does
                     and if the motd isn't a regular file, just return instead of giving
