added stdarg's tcl_traffic patch (which was modified by yours truly)

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.260 2001/12/20 06:53:15 guppy Exp $
+$Id: UPDATES1.6,v 1.261 2001/12/20 07:51:26 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+various   stdarg/   added tcl_traffic (a modified copy of stdarg's original patch)
+          guppy/
 Tothwolf  guppy     .servers doesn't trunicate server names anymore
 Wcc       guppy     made cmd_modules work locally as well as remotely
           guppy     made show_banner reset the help_subst arguments like show_motd does
