added my onchanfix patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.261 2001/12/20 07:51:26 guppy Exp $
+$Id: UPDATES1.6,v 1.262 2001/12/20 17:37:19 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+Abraham   guppy     tcl_onchan can now be used without a channel to check all the bot's 
+                    channels
 various   stdarg/   added tcl_traffic (a modified copy of stdarg's original patch)
           guppy/
 Tothwolf  guppy     .servers doesn't trunicate server names anymore
