applied a few more changes to some tcl commands to make them take an optional channel argument

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.262 2001/12/20 17:37:19 guppy Exp $
+$Id: UPDATES1.6,v 1.263 2001/12/20 18:52:10 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+various   guppy     tcl_botisvoice, tcl_botisop, tcl_botonchan, tcl_onchansplit, tcl_isop,
+                    tcl_isvoice, and tcl_handonchan all take channel as an optional argument
+                    now
 Abraham   guppy     tcl_onchan can now be used without a channel to check all the bot's 
                     channels
 various   stdarg/   added tcl_traffic (a modified copy of stdarg's original patch)
