--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.264 2001/12/20 21:05:13 guppy Exp $
+$Id: UPDATES1.6,v 1.265 2001/12/21 05:12:37 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          BarkerJr  log remote .who's
           BarkerJr  fixed a small bug in guppy's last patch
 various   guppy     tcl_botisvoice, tcl_botisop, tcl_botonchan, tcl_onchansplit, tcl_isop,
                     tcl_isvoice, and tcl_handonchan all take channel as an optional argument
