--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.266 2001/12/21 05:57:28 guppy Exp $
+$Id: UPDATES1.6,v 1.267 2001/12/21 18:51:11 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          quest/    fixed a problem on osx with files being shown as bytecount/-1
+          stdarg
           BarkerJr  log the remote .who command
           BarkerJr  fixed a small bug in guppy's last patch
 various   guppy     tcl_botisvoice, tcl_botisop, tcl_botonchan, tcl_onchansplit, tcl_isop,
