added my nopass.diff

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.267 2001/12/21 18:51:11 guppy Exp $
+$Id: UPDATES1.6,v 1.268 2001/12/22 04:42:16 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+VYOinlove guppy     don't try to open a dcc chat when people do /ctcp <bot> chat without a
+                    a password set, instead send an error message
           quest/    fixed a problem on osx with files being shown as bytecount/-1
           stdarg
           BarkerJr  log the remote .who command
