--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.269 2001/12/22 05:02:00 guppy Exp $
+$Id: UPDATES1.6,v 1.270 2001/12/22 20:25:15 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          guppy     origbotname was being wrongly used in some locations
           guppy     fixed a bug that prevented MODE from being sent when we get ops on a
                     channel to retrieve the proper channel key
 VYOinlove guppy     don't try to open a dcc chat when people do /ctcp <bot> chat without a
