added Wcc's nettype_modes patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.270 2001/12/22 20:25:15 guppy Exp $
+$Id: UPDATES1.6,v 1.271 2001/12/22 20:58:34 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       max-modes and max-modes are automatically set by net-type now
           guppy     origbotname was being wrongly used in some locations
           guppy     fixed a bug that prevented MODE from being sent when we get ops on a
                     channel to retrieve the proper channel key
