tcl_bot should be tcl_boot

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,11 +1,11 @@
-$Id: UPDATES1.6,v 1.272 2001/12/23 06:49:13 guppy Exp $
+$Id: UPDATES1.6,v 1.273 2001/12/23 06:52:30 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
-jedis     guppy     fixed tcl_bot when kicking someone on another bot without a reason from
+jedis     guppy     fixed tcl_boot when kicking someone on another bot without a reason from
                     screwing up the boot reason
           Wcc       max-modes and max-modes are automatically set by net-type now
           guppy     origbotname was being wrongly used in some locations
