--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.273 2001/12/23 06:52:30 guppy Exp $
+$Id: UPDATES1.6,v 1.274 2001/12/26 03:50:40 tothwolf Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Tothwolf  copyright updates
 jedis     guppy     fixed tcl_boot when kicking someone on another bot without a reason from
                     screwing up the boot reason
           Wcc       max-modes and max-modes are automatically set by net-type now
