added the sum whom patch by BarkerJr

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.274 2001/12/26 03:50:40 tothwolf Exp $
+$Id: UPDATES1.6,v 1.275 2001/12/29 05:38:49 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          BarkerJr  cmd_whom now displays a sum of all the partyline users
           Tothwolf  copyright updates
 jedis     guppy     fixed tcl_boot when kicking someone on another bot without a reason from
                     screwing up the boot reason
