--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.275 2001/12/29 05:38:49 guppy Exp $
+$Id: UPDATES1.6,v 1.276 2001/12/29 05:43:34 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       added $hand-len for scripters to get the current length of handles from
+                    src/eggdrop.h (this setting does not adjust handle lengths however)
           BarkerJr  cmd_whom now displays a sum of all the partyline users
           Tothwolf  copyright updates
 jedis     guppy     fixed tcl_boot when kicking someone on another bot without a reason from
