--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.277 2001/12/29 05:48:33 guppy Exp $
+$Id: UPDATES1.6,v 1.278 2001/12/29 05:49:47 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+various   zip       prevent the bot from loosing channel flags when allow-resync is set
           Wcc       some small cosmetic changes
           Wcc       added $hand-len for scripters to get the current length of handles from
                     src/eggdrop.h (this setting does not adjust handle lengths however)
