--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,12 +1,13 @@
-$Id: UPDATES1.6,v 1.279 2001/12/29 05:52:34 guppy Exp $
+$Id: UPDATES1.6,v 1.280 2001/12/29 21:46:29 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       updated doc/BOTNET and added doc/first_script.txt
           Wcc       removed some old debugging information
-various   zip       prevent the bot from loosing channel flags when allow-resync is set
+various   zip       prevent the bot from losing channel flags when allow-resync is set
           Wcc       some small cosmetic changes
           Wcc       added $hand-len for scripters to get the current length of handles from
                     src/eggdrop.h (this setting does not adjust handle lengths however)
