added a few names to AUTHORS -- I need some realnames though for stdarg, BarkerJr and uhm ... *thinks*

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -11,9 +11,10 @@
    Developers and Contributors (in alphabetical order):
 
    arthur2   Jerome Carre
-   ButchBub
+   BarkerJr
    Beldin    Darrin Smith
    Ben       Ben Dover
+   ButchBub
    Cybah     Jonathan Miles
    david     David Newhall II
    drummer   Dobos Lorant
@@ -30,9 +31,9 @@
    ITE       Federico Mennite
    Jason     Jason Ede
    Johoho    Wiktor Wodecki
+   KingKurly
    Kirben    Travis Howell
    Kirk      Ian Kaney
-   KingKurly
    Lucas
    nakee     Ely Levy
    poptix    Matthew Hallacy
@@ -42,12 +43,14 @@
    SegFault  Ryan Butler
    Shaun     Shaun Braun
    slennox   Shayne Lennox
+   stdarg
    Sup       Teemu Hjelt
    SuperS
    TheGhost
    TheUnknown
    toot      Toby Verrall
    Tothwolf  
+   Wcc       Will Buckner
 
    Thanks go to all the people who have made individual contributions to
    the Eggdrop project by sending bug-reports, patches and otherwise have
