changed nick-len and hand-len to nicklen nad handlen (Wcc is gonna update the docs .. nick-len is still there for backwards compat

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.280 2001/12/29 21:46:29 guppy Exp $
+$Id: UPDATES1.6,v 1.281 2001/12/30 06:32:43 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
@@ -9,7 +9,7 @@ Found by  Fixed by  What...
           Wcc       removed some old debugging information
 various   zip       prevent the bot from losing channel flags when allow-resync is set
           Wcc       some small cosmetic changes
-          Wcc       added $hand-len for scripters to get the current length of handles from
+          Wcc       added $handlen for scripters to get the current length of handles from
                     src/eggdrop.h (this setting does not adjust handle lengths however)
           BarkerJr  cmd_whom now displays a sum of all the partyline users
           Tothwolf  copyright updates
