some small changes leading upto 1.6.8 (hopefully unless there is a problem installing the cvs on freebsd machines)

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -11,7 +11,7 @@
    Developers and Contributors (in alphabetical order):
 
    arthur2   Jerome Carre
-   BarkerJr
+   BarkerJr  Bryon Eldridge
    Beldin    Darrin Smith
    Ben       Ben Dover
    ButchBub
