--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.282 2001/12/30 07:56:35 guppy Exp $
+$Id: UPDATES1.6,v 1.283 2001/12/30 18:38:22 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          guppy     changed checkmodule to loadmodule in the configs (checkmodule still
+                    works for backwards compat)
           guppy     renamed nick-len to nicklen (nick-len still exists for backwards
                     compat) to follow the standard that handlen uses
           Wcc       updated doc/BOTNET and added doc/first_script.txt
