added a few small changes to 1.6.8

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -46,6 +46,7 @@
    stdarg
    Sup       Teemu Hjelt
    SuperS
+   TaKeDa    Dariusz Kulinski
    TheGhost
    TheUnknown
    toot      Toby Verrall
