--- a/language/core.french.lang
+++ b/language/core.french.lang
@@ -1,7 +1,7 @@
 # core.french.lang
 #   core language messages for eggdrop
 #
-# $Id: core.french.lang,v 1.21 2001/12/20 04:53:28 guppy Exp $
+# $Id: core.french.lang,v 1.22 2001/12/31 06:47:13 guppy Exp $
 
 
 # General stuff
@@ -414,7 +414,7 @@ Faites un Telnet sur le bot et entrez 'NEW' comme surnom.
 0xe16,Connexion DCC fermée (%s!%s)
 0xe17,Echec de la tentative de TELNET en cours (%s)
 0xe18,Refus %s/%d (mauvais port source)
-0xe19,Refus %s/%d (ip invalide)
+# 0xe19 - unused
 0xe1a,Refus %s (mauvais hostname)
 0xe1b,Connexion telnet: %s/%d
 0xe1c,Echec de l'ident pour %s: %s
