--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,14 @@
-$Id: UPDATES1.6,v 1.283 2001/12/30 18:38:22 guppy Exp $
+$Id: UPDATES1.6,v 1.284 2001/12/31 06:47:13 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          guppy     removed the checks for ips with 0 or 255 in them
+various   guppy     when a leaf is thinking that uses a different HANDLEN then ours log
+                    it and then drop the connection instead of just silently dropping
+                    the connection
           guppy     changed checkmodule to loadmodule in the configs (checkmodule still
                     works for backwards compat)
           guppy     renamed nick-len to nicklen (nick-len still exists for backwards
