--- a/language/core.english.lang
+++ b/language/core.english.lang
@@ -1,7 +1,7 @@
 # core.english.lang
 #   core language messages for eggdrop
 #
-# $Id: core.english.lang,v 1.28 2001/12/20 04:53:28 guppy Exp $
+# $Id: core.english.lang,v 1.29 2001/12/31 06:47:13 guppy Exp $
 
 # General stuff
 0x001,Usage
@@ -413,7 +413,7 @@ Telnet to the bot and enter 'NEW' as your nickname.
 0xe16,DCC connection closed (%s!%s)
 0xe17,Failed TELNET incoming (%s)
 0xe18,Refused %s/%d (bad src port)
-0xe19,Refused %s/%d (invalid ip)
+# 0xe19 - unused
 0xe1a,Refused %s (bad hostname)
 0xe1b,Telnet connection: %s/%d
 0xe1c,Ident failed for %s: %s
