added the sentinel patch and removed a few files I forgot to remove

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.285 2002/01/02 03:46:33 guppy Exp $
+$Id: UPDATES1.6,v 1.286 2002/01/02 03:50:48 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       updated slennox's sentinel.tcl to the latest version
           Wcc       updated the html docs to be in sync with the text ones
           Wcc       updated the copyright info for 2002
           guppy     removed the checks for ips with 0 or 255 in them
