oops, I was in the wrong dir on the previous commit .. added the cosmetic patches for purals also now

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.286 2002/01/02 03:50:48 guppy Exp $
+$Id: UPDATES1.6,v 1.287 2002/01/02 03:55:19 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Wcc       fixed some cosmetic bugs relating to either 1 user or X users, stuff
+                    like that
           Wcc       updated slennox's sentinel.tcl to the latest version
           Wcc       updated the html docs to be in sync with the text ones
           Wcc       updated the copyright info for 2002
