more copyright updates and documentation changes

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.288 2002/01/02 05:04:52 guppy Exp $
+$Id: UPDATES1.6,v 1.289 2002/01/02 08:06:12 tothwolf Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+          Tothwolf  more copyright updates and documentation changes
           blaster^  raised the kick reason length to 307 for dalnet
           Wcc       fixed some cosmetic bugs relating to either 1 user or X users, stuff
                     like that
