--- a/src/mod/console.mod/language/console.french.lang
+++ b/src/mod/console.mod/language/console.french.lang
@@ -1,7 +1,7 @@
 # console.french.lang
 #   language messages for the console module
 #
-# $Id: console.french.lang,v 1.1 2001/12/02 21:43:28 guppy Exp $
+# $Id: console.french.lang,v 1.2 2002/01/02 08:06:15 tothwolf Exp $
 
 0xb040,Paramètres de console sauvegardés :
 0xb041,Vos paramètres de console ont été sauvegardés :
@@ -13,4 +13,3 @@
 0xb047,Canal sur la console :
 0xb048,oui
 0xb049,non
-
