removed a small tck hack that PPSlim reminded me about .. waiting on a patch from Wcc to release 1.6.8

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.289 2002/01/02 08:06:12 tothwolf Exp $
+$Id: UPDATES1.6,v 1.290 2002/01/02 20:23:39 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.8
 Found by  Fixed by  What...
+PPSlim    guppy     removed a legacy tcl hack that probably no one but old eggdrop users
+                    knew about <g>
           Tothwolf  more copyright updates and documentation changes
           blaster^  raised the kick reason length to 307 for dalnet
           Wcc       fixed some cosmetic bugs relating to either 1 user or X users, stuff
