added Wcc's latest doc (wasn't sent via email since his stmp is busted)

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,5 @@
 Compilation and Installation of Eggdrop
+Last revised: December 29, 2001
   ________________________________________________________________________
 
 This is the quick install guide, if you have had little or no experience
