eggdrop1.6.9 here we go

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,9 +1,12 @@
-$Id: UPDATES1.6,v 1.290 2002/01/02 20:23:39 guppy Exp $
+$Id: UPDATES1.6,v 1.291 2002/01/03 04:32:54 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
-1.6.8
+1.6.9
+Found by  Fixed by  What...
+
+1.6.8 (2 January 2002)
 Found by  Fixed by  What...
 PPSlim    guppy     removed a legacy tcl hack that probably no one but old eggdrop users
                     knew about <g>
