--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.291 2002/01/03 04:32:54 guppy Exp $
+$Id: UPDATES1.6,v 1.292 2002/01/08 04:11:52 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+|^Raven^| stdarg/   hand2nick, nick2hand, handonchan, and chanlist might not always return
+          guppy     that a user is known even if we know they are -- this has been fixed
 
 1.6.8 (2 January 2002)
 Found by  Fixed by  What...
