--- a/language/core.german.lang
+++ b/language/core.german.lang
@@ -6,7 +6,7 @@
 # Modified by Michael for 1.3.25.
 # Modified by rtc for 1.4.0
 #
-# $Id: core.german.lang,v 1.27 2001/12/31 06:47:13 guppy Exp $
+# $Id: core.german.lang,v 1.28 2002/01/08 04:24:27 guppy Exp $
 
 # General stuff
 0x001,Gebrauch
@@ -388,7 +388,7 @@ Baue eine Telnetverbindung zu dem Bot auf und gib 'NEW' als Deinen Nickname ein.
 0xc1d,%s wurde gewaltsam entfernt wegen Flood.\n
 0xc1e,-=- poof -=-\n
 0xc1f,Du wurdest von dem %s runtergeworfen von %s%s%s\n
-0xc20,%s hat %s aus der Partyline rausgeschmissen%s%s\n
+0xc20,%s hat %s aus der Partyline rausgeschmissen%s%s
 0xc21,DCC Chat abgewiesen (falscher Port)
 0xc22,DCC-Port ungueltig
 
