--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,11 +1,11 @@
-$Id: UPDATES1.6,v 1.294 2002/01/08 04:26:10 guppy Exp $
+$Id: UPDATES1.6,v 1.295 2002/01/08 04:28:59 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
-BarkerJr  guppy     update a bot's laston info when the bot links
+          BarkerJr  update a bot's laston info when the bot links
 jedis     guppy     some more remote boot fixes 
 |^Raven^| stdarg/   hand2nick, nick2hand, handonchan, and chanlist might not always return
           guppy     that a user is known even if we know they are -- this has been fixed
