--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.296 2002/01/14 21:19:36 guppy Exp $
+$Id: UPDATES1.6,v 1.297 2002/01/14 21:20:49 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          ITE       more 64bit arch fixes
           BarkerJr  lets log remote botinfo calls
           BarkerJr  update a bot's laston info when the bot links
 jedis     guppy     some more remote boot fixes 
