--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,12 +1,14 @@
-$Id: UPDATES1.6,v 1.297 2002/01/14 21:20:49 guppy Exp $
+$Id: UPDATES1.6,v 1.298 2002/01/14 21:23:49 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+blaster^  Eule      fixed a memleak when adding users
           ITE       more 64bit arch fixes
           BarkerJr  lets log remote botinfo calls
+          blaster^  
           BarkerJr  update a bot's laston info when the bot links
 jedis     guppy     some more remote boot fixes 
 |^Raven^| stdarg/   hand2nick, nick2hand, handonchan, and chanlist might not always return
