added Wcc's cosmetic patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.299 2002/01/16 03:17:59 guppy Exp $
+$Id: UPDATES1.6,v 1.300 2002/01/16 03:24:16 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       a bunch of little cosmetic changes
           Wcc       more doc updates
 blaster^  Eule      fixed a memleak when adding users
           ITE       more 64bit arch fixes
