Updated an AUTHORS entry

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -47,7 +47,7 @@
    Sup       Teemu Hjelt
    SuperS
    TaKeDa    Dariusz Kulinski
-   TheGhost
+   TheGhost  James Simmons
    TheUnknown
    toot      Toby Verrall
    Tothwolf  
