Forgot two UPDATES entries.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.300 2002/01/16 03:24:16 guppy Exp $
+$Id: UPDATES1.6,v 1.301 2002/01/24 21:26:14 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       [pass] should be <pass> in usage notices
+          Wcc       more cosmetic changes
           Wcc       a bunch of little cosmetic changes
           Wcc       more doc updates
 blaster^  Eule      fixed a memleak when adding users
