--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.301 2002/01/24 21:26:14 wcc Exp $
+$Id: UPDATES1.6,v 1.302 2002/01/27 04:14:25 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       some docs were not getting installed correctly
           Wcc       [pass] should be <pass> in usage notices
           Wcc       more cosmetic changes
           Wcc       a bunch of little cosmetic changes
