--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.303 2002/01/29 21:08:50 guppy Exp $
+$Id: UPDATES1.6,v 1.304 2002/02/04 03:51:29 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       added a warning about allow-resync in the config file
           TaKeDa    prevent botnet flooding when adding ignores which already exist
           Wcc       some docs were not getting installed correctly
           Wcc       [pass] should be <pass> in usage notices
