--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.307 2002/02/07 05:14:44 guppy Exp $
+$Id: UPDATES1.6,v 1.308 2002/02/12 00:35:23 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       fixed a couple of cosmetic problems in cmd_pls_user
           Wcc       do not eval init-server on rehash since this variable is used for
                     performing tcl commands on a succesful server connection
 MaSsKilla dw	    Couldn't introduce new users through telnet if a
