added Eule's membercheck patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.309 2002/02/12 04:00:44 guppy Exp $
+$Id: UPDATES1.6,v 1.310 2002/02/16 07:22:07 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Eule      missing sanity check in check_this_member
 Paladinz  guppy     ircu2.10.11 properly formats PART messages; however, eggdrop did not
                     understand them
           Wcc       fixed a couple of cosmetic problems in cmd_pls_user
