added TaKeDa's revengemode_fix

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.310 2002/02/16 07:22:07 guppy Exp $
+$Id: UPDATES1.6,v 1.311 2002/02/19 22:14:23 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          TaKeDa    fixed a bug where revenge-mode > 1 wouldn't kick users if dontkickops
+                    was set
           Eule      missing sanity check in check_this_member
 Paladinz  guppy     ircu2.10.11 properly formats PART messages; however, eggdrop did not
                     understand them
