added TaKeDa's flood-kick patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,14 @@
-$Id: UPDATES1.6,v 1.311 2002/02/19 22:14:23 guppy Exp $
+$Id: UPDATES1.6,v 1.312 2002/02/19 22:19:23 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          TaKeDa    changed how kicking flooders works when -dontkickops
+                      flood-kick: don't punish people with +mf
+                      flood-deop: don't punish people with +mf
+                      other floods: don't punish people with +f
           TaKeDa    fixed a bug where revenge-mode > 1 wouldn't kick users if dontkickops
                     was set
           Eule      missing sanity check in check_this_member
