--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.313 2002/02/19 22:21:28 guppy Exp $
+$Id: UPDATES1.6,v 1.314 2002/02/19 22:23:35 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       more cosmetic fixes to src/cmds.c
           Eule      small cosmetic fix to cmd_store
           TaKeDa    changed how kicking flooders works when -dontkickops
                       flood-kick: don't punish people with +mf
