added the lastoff_bot patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.314 2002/02/19 22:23:35 guppy Exp $
+$Id: UPDATES1.6,v 1.315 2002/02/20 22:28:08 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+BarkerJr  TaKeDa    update a bot's laston info when the bot unlinks
           Wcc       more cosmetic fixes to src/cmds.c
           Eule      small cosmetic fix to cmd_store
           TaKeDa    changed how kicking flooders works when -dontkickops
