fixed a crash reported by dw dealing with stoned server checking, also, I changed stoned server checking to reset waiting_for_awake whenever we get data from the irc server, not just specific data .. if anyone sees a problem with this, please let me know and I'll revert it.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,13 @@
-$Id: UPDATES1.6,v 1.316 2002/02/20 22:32:35 guppy Exp $
+$Id: UPDATES1.6,v 1.317 2002/02/22 04:04:57 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+dw        guppy     fixed a crash that would happen when we disconnected from our server
+                    but did not reconnect to a server before we checked if a server was
+                    stoned
           BHAB      lets compile on solaris now
 BarkerJr  TaKeDa    update a bot's laston info when the bot unlinks
           Wcc       more cosmetic fixes to src/cmds.c
