added TaKeDa's/ITE's cygwin patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.317 2002/02/22 04:04:57 guppy Exp $
+$Id: UPDATES1.6,v 1.318 2002/02/22 05:26:06 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          TaKeDa/   configure should recognize a dynamic tcl library now on cygwin
+          ITE
 dw        guppy     fixed a crash that would happen when we disconnected from our server
                     but did not reconnect to a server before we checked if a server was
                     stoned
