--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.318 2002/02/22 05:26:06 guppy Exp $
+$Id: UPDATES1.6,v 1.319 2002/02/24 07:17:57 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Eule      removed gban_total, gexempt_total and ginvite_total since they were
+                    unused
           TaKeDa/   configure should recognize a dynamic tcl library now on cygwin
           ITE
 dw        guppy     fixed a crash that would happen when we disconnected from our server
