--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.319 2002/02/24 07:17:57 guppy Exp $
+$Id: UPDATES1.6,v 1.320 2002/02/24 07:37:01 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          ITE       made modconfig more portable across various bourne shell flavours
           Eule      removed gban_total, gexempt_total and ginvite_total since they were
                     unused
           TaKeDa/   configure should recognize a dynamic tcl library now on cygwin
