fixed a small annoying problem when rerunning ./configure

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.320 2002/02/24 07:37:01 guppy Exp $
+$Id: UPDATES1.6,v 1.321 2002/02/24 07:57:43 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+various   guppy     fixed a problem with modconfig not being found when rerunning
+                    ./configure
           ITE       made modconfig more portable across various bourne shell flavours
           Eule      removed gban_total, gexempt_total and ginvite_total since they were
                     unused
