--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.321 2002/02/24 07:57:43 guppy Exp $
+$Id: UPDATES1.6,v 1.322 2002/02/24 09:09:01 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+MC_8      stdarg    "channel info" will properly list all user-defined settings
 various   guppy     fixed a problem with modconfig not being found when rerunning
                     ./configure
           ITE       made modconfig more portable across various bourne shell flavours
