fixed a bunch of binds, please look over this patch and see if there is a better solution I'm missing

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.322 2002/02/24 09:09:01 guppy Exp $
+$Id: UPDATES1.6,v 1.323 2002/02/24 16:50:14 guppy Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+Xerxes    guppy     "channel remove" will not crash the bot anymore if you are removing
+                    the channel for which the bind was called
 MC_8      stdarg    "channel info" will properly list all user-defined settings
 various   guppy     fixed a problem with modconfig not being found when rerunning
                     ./configure
