--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.323 2002/02/24 16:50:14 guppy Exp $
+$Id: UPDATES1.6,v 1.324 2002/02/25 03:34:16 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       more plural fixes for commands and error messages
 Xerxes    guppy     "channel remove" will not crash the bot anymore if you are removing
                     the channel for which the bind was called
 MC_8      stdarg    "channel info" will properly list all user-defined settings
