--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.324 2002/02/25 03:34:16 wcc Exp $
+$Id: UPDATES1.6,v 1.325 2002/02/25 03:39:57 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.9
 Found by  Fixed by  What...
+          Wcc       made a few cosmetic changes to the configure script
           Wcc       more plural fixes for commands and error messages
 Xerxes    guppy     "channel remove" will not crash the bot anymore if you are removing
                     the channel for which the bind was called
